// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./antdv-demo/docs/spin/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
    <!---->
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/spin/demo/custom-indicator.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <div>
      <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
        <!---->
      </div>
    </div>
    <div class="ant-spin-container ant-spin-blur"><span slot="indicator" style="font-size: 24px;" role="img" aria-label="loading" class="anticon anticon-loading"><svg class="anticon-spin" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="0 0 1024 1024" focusable="false"><path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path></svg></span></div>
  </div>
  <div class="ant-spin ant-spin-spinning"><span style="font-size: 24px;" role="img" aria-label="loading" class="anticon anticon-loading ant-spin-dot"><svg class="anticon-spin" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="0 0 1024 1024" focusable="false"><path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path></svg></span>
    <!---->
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <div class="spin-content"> 可以点击‘切换’按钮，延迟显示 loading 效果。当 spinning 状态在 \`delay\` 时间内结束，则不显示 loading 状态。 </div>
    </div>
  </div> Loading state：<button class="ant-switch" type="button" role="switch" aria-checked="false">
    <!----><span class="ant-switch-inner"><!----></span>
  </button>
</div>
`;

exports[`renders ./antdv-demo/docs/spin/demo/inside.md correctly 1`] = `
<div class="example">
  <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
    <!---->
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/spin/demo/nested.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <div class="spin-content"> 可以点击‘切换’按钮，控制本区域的spin展示。 </div>
    </div>
  </div> Loading state：<button class="ant-switch" type="button" role="switch" aria-checked="false">
    <!----><span class="ant-switch-inner"><!----></span>
  </button>
</div>
`;

exports[`renders ./antdv-demo/docs/spin/demo/size.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-sm ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
    <!---->
  </div>
  <div class="ant-spin ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
    <!---->
  </div>
  <div class="ant-spin ant-spin-lg ant-spin-spinning"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
    <!---->
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/spin/demo/tip.md correctly 1`] = `
<div>
  <div class="ant-spin-nested-loading">
    <div>
      <div class="ant-spin ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
        <div class="ant-spin-text">Loading...</div>
      </div>
    </div>
    <div class="ant-spin-container ant-spin-blur">
      <div class="spin-content"> 我的描述文案是自定义的。。。 </div>
    </div>
  </div>
</div>
`;
